package eos.auth;

import "proto/XrdOucErrInfo.proto";
import "proto/XrdSecEntity.proto";

//------------------------------------------------------------------------------
// Exists request protocol buffer message 
//------------------------------------------------------------------------------

message ExistsProto {
  required string path = 1;
  required XrdOucErrInfoProto error = 3;
  required XrdSecEntityProto client = 4;
  optional string opaque = 5;
}
  
