package eos.auth;

import "proto/XrdOucErrInfo.proto";
import "proto/XrdSecEntity.proto";
import "proto/XrdSfsPrep.proto";

//------------------------------------------------------------------------------
// Prepare request protocol buffer message 
//------------------------------------------------------------------------------

message PrepareProto {
  required XrdSfsPrepProto pargs = 1;
  required XrdOucErrInfoProto error = 2;
  required XrdSecEntityProto client = 3;
}
