package eos.auth;

import "proto/XrdOucErrInfo.proto";
import "proto/XrdSecEntity.proto";

//------------------------------------------------------------------------------
// Rem request protocol buffer message 
//------------------------------------------------------------------------------

message RemProto {
  required string path = 1;
  required XrdOucErrInfoProto error = 2;
  required XrdSecEntityProto client = 3;
  optional string opaque = 4 [default = ""];
}
